fixed horizontal overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,14 @@
 .App {
   text-align: center;
   width: 100vw;
-  max-width: 1331px;
+  max-width: 100%;
   display: flex; 
   flex-direction: column;
   align-items: center;
+}
+
+.App > * {
+    max-width: 1331px;
 }
 
 .App-logo {
